typo in submodularity section

--- a/_posts/blog/2019-08-15-mlss-2019.md
+++ b/_posts/blog/2019-08-15-mlss-2019.md
@@ -240,9 +240,9 @@ Science is inherently political. We all have a responsibility to be cognizant of
 
 Lecturer: Stefanie Jegelka [[Slides](https://github.com/mlss-2019/slides/tree/master/submodular)] [[Video](https://videoken.com/embed/P2mcH0RoPD0)]
 
-This was a fairly niche topic and most people hadn't heard of it. Essentially, it is a technique in combinatorial optimization for optimal subset selection. Subset selection is clearly relevant to ML, e.g., for active learning, coordinate selection, compression, and so on. However, optimizing a *set function* $F(s), s \in S$ is non-trivial; subsets are discrete objects, and for any universe $S$ there are $2^S$ possible subsets! 
+This was a fairly niche topic and most people hadn't heard of it. Essentially, it is a technique in combinatorial optimization for optimal subset selection. Subset selection is clearly relevant to ML, e.g., for active learning, coordinate selection, compression, and so on. However, optimizing a *set function* over subsets $F(s), s \subseteq S$ is non-trivial; sets are discrete objects, and for any set $S$ there are $2^S$ possible subsets! 
 
-It turns out there are specific classes of set functions called *submodular functions* that can be optimized in a reasonable amount of time. These functions have a property called *submodularity*. In words, this means that if you have a subset $T$ and a subset $S$, and $T \subseteq S$, adding a new element $a \notin S$ to the "smaller" subset $T$ should give you a higher value than adding it to $S$. This is also referred to as diminishing gains. Written out, it is 
+It turns out there are specific classes of functions called *submodular functions* that can be optimized in a reasonable amount of time. These functions have a property called *submodularity*. In words, this means that if you have a subset $T$ and a subset $S$, and $T \subseteq S$, adding a new element $a \notin S$ to the "smaller" subset $T$ should give you a higher value than adding it to $S$. This is also referred to as diminishing gains. Written out, it is 
 
 $$F(T \cup \{a\}) - F(T) \geq F(S \cup \{a\}) - F(S), T \subseteq S, a \notin T.
 $$
