MLSS blog post typos

--- a/_posts/blog/2019-08-15-mlss-2019.md
+++ b/_posts/blog/2019-08-15-mlss-2019.md
@@ -27,13 +27,13 @@ Before I jump into discussing technical highlights...
 
 ## Wait, why are PhD students going to summer school?
 
-For those of you reading this that may not know what a summer school is, summer schools are typically focused on a specific topic, have daily lectures and practicals, and can last from a few days to two weeks. The location of the summer school is usually in an exciting place, so that students can explore the area together. Usually there's also a poster session for students to share their ongoing work. 
+For those of you reading this that may not know what a summer school is, summer schools are typically focused on a specific topic, have daily lectures and practicals, and can last from a few days to two weeks. The location of the summer school is usually in an exciting place, so that students can explore the area together. Usually there's also a poster session for students to share their ongoing work. At this MLSS, days were structured as two 2-hour lectures followed by a practical which involved writing code for some exercises.
 
 From what I've been told and from what I experienced, one of the best reason to attend a summer school is to make friends with other highly-motivated students from around the world. We were lucky enough that Arthur and Marc assembled an amazingly diverse cohort. Out of the ~200 students that attended, 53 nationalities were represented! 
 
 ## It wasn't all work
 
-I was surrounded by a ton of brilliant people fom the moment. Here are some highlights from the fun times we had:
+I was surrounded by a ton of brilliant people from the moment I arrived in London. Here are some highlights from the fun times we had:
 
 * Experienced the [hottest day in UK history](https://www.bbc.com/news/uk-49157898). OK so this wasn't "fun" but our joint suffering was a great bonding experience. I'm used to this type of heat back in Florida, but in London most buildings don't have air conditioning.
 * On the Saturday afternoon we bought ~half the food at a local grocery store to feed a large group of us that were having a picnic in Green park near Buckingham Palace
@@ -46,7 +46,7 @@ I was surrounded by a ton of brilliant people fom the moment. Here are some high
 %}
 
 ## Technical highlights from MLSS
-I'll only be discussing some of the lectures, but all of the slides and lectures are available at the [Github page](https://github.com/mlss-2019). Most topics had two 2-hour lectures followed by a practical which involved writing code for some exercises.
+I'll only be discussing some of the lectures in this post, but all of the slides and lectures are available at the [MLSS Github page](https://github.com/mlss-2019).
 
 ## Optimization
 
