rewording ppde post

--- a/_posts/blog/2023-01-05-ppde.md
+++ b/_posts/blog/2023-01-05-ppde.md
@@ -26,11 +26,11 @@ Presented at [NeurIPS'22 Workshop on Machine Learning in Structural Biology](htt
 
 ## Summary
 
-Machine-learning-based directed evolution can be used to engineer new proteins that have improved productivity or catalyze new reactions. Basically, starting from a known protein sequence, directed evolution proceeds by proposing mutations, experimentally verifying them, and then using the gained information to propose new mutations. [The intention is for this iterative process to resemble natural evolution](http://www.cheme.caltech.edu/groups/fha/old_website_2011_06_08/Arnold_ACR_1998.pdf). One way ML can help streamline this design loop is by optimizing the candidate proposal step.
+Machine-learning-based directed evolution can be used to engineer new proteins that have improved productivity or catalyze new reactions. Basically, starting from a known protein sequence, directed evolution proceeds by identifying candidate mutations, experimentally verifying them, and then using the gained information to search for better mutations. [The intention is for this iterative process to resemble natural evolution](http://www.cheme.caltech.edu/groups/fha/old_website_2011_06_08/Arnold_ACR_1998.pdf). One way ML can help streamline this design loop is by optimizing the candidate indentification step.
 
-In this paper, we introduce a plug and play protein sampler for this proposal step. The sampler mixes and matches *unsupervised* evolutionary sequence models (e.g., protein language models) with *supervised* sequence models that map sequence to function, without needing any model re-training or fine-tuning. Sampling is performed in sequence space to keep things as ''black-box'' as possible. Plug and play samplers have been successful in other domains, such as for controlled [image](https://openaccess.thecvf.com/content_cvpr_2017/html/Nguyen_Plug__Play_CVPR_2017_paper.html) and [text](https://arxiv.org/abs/1912.02164) generation.
+In this paper, we introduce a plug and play protein sampler for this step. The sampler mixes and matches *unsupervised* evolutionary sequence models (e.g., protein language models) with *supervised* sequence models that map sequence to function, without needing any model re-training or fine-tuning. Sampling is performed in sequence space to keep things as ''black-box'' as possible. Plug and play samplers have been successful in other domains, such as for controlled [image](https://openaccess.thecvf.com/content_cvpr_2017/html/Nguyen_Plug__Play_CVPR_2017_paper.html) and [text](https://arxiv.org/abs/1912.02164) generation.
 
-Searching through protein sequence space *efficiently*, which is high-dimensional and discrete, is notoriously difficult. We address this by using the gradient of the target function to bias a mutation proposal distribution towards favorable mutations. We show that this approach outperforms classic random search.
+Searching through protein sequence space *efficiently*, which is high-dimensional and discrete, is notoriously difficult. We address this in our MCMC-based sampler by using the *gradient* of the (differentiable) target function to bias a mutation proposal distribution towards favorable mutations. We show that this approach outperforms classic random search.
 
 {%
     include image.html
