Added 3d structure viz to ppde

--- a/_posts/blog/2023-01-05-ppde.md
+++ b/_posts/blog/2023-01-05-ppde.md
@@ -23,6 +23,11 @@ Presented at [NeurIPS'22 Workshop on Machine Learning in Structural Biology](htt
 
 [[arxiv]](https://arxiv.org/abs/2212.09925) [[Github]](https://github.com/pemami4911/ppde) [[colab demo]](https://colab.research.google.com/drive/1s3heukQga1ShfxrAMRxNtZFfSwu_D_m7?usp=sharing)
 
+{%
+    include image.html
+    img="/img/PPDE/Proteins_qual_1row.png"
+    caption="The marginal frequency of each sequence position visualized on the 3D structure of the wild type is the fraction of protein variants in the sampled variant pool that have a mutation at that sequence position. For example, nearly 100% of discovered UBE4B variants have a mutation at position 1145."
+%}
 
 ## Summary
 
