--- a/_posts/blog/2023-01-05-ppde.md
+++ b/_posts/blog/2023-01-05-ppde.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Plug & Play Directed Evolution for Proteins with Gradient-based Discrete MCMC"
+title: "Plug & Play Directed Evolution of Proteins with Gradient-based Discrete MCMC"
 date: 2023-01-05
 category: blog
 byline: "Web page for PPDE"
