--- a/_posts/blog/2023-01-05-ppde.md
+++ b/_posts/blog/2023-01-05-ppde.md
@@ -18,16 +18,46 @@ MathJax.Hub.Config({
 </script>
 
 ---
-[**Patrick Emami**](https://pemami4911.github.io), [Aidan Perreault](https://dblp.org/pid/230/7966.html), [Jeff Law](https://scholar.google.com/citations?user=N4r7gmAAAAAJ&hl=en&oi=ao), [David Biagioni](https://scholar.google.com/citations?user=971GyxQAAAAJ&hl=en&oi=sra), [Peter C. St. John](https://pcstj.com/cv/). *Under review.*  
+[**Patrick Emami**](https://pemami4911.github.io), [Aidan Perreault](https://dblp.org/pid/230/7966.html), [Jeff Law](https://scholar.google.com/citations?user=N4r7gmAAAAAJ&hl=en&oi=ao), [David Biagioni](https://scholar.google.com/citations?user=971GyxQAAAAJ&hl=en&oi=sra), [Peter C. St. John](https://pcstj.com/cv/).
+Machine Learning: Science and Technology, 2023. 
 Presented at [NeurIPS'22 Workshop on Machine Learning in Structural Biology](https://www.mlsb.io/).
 
-[[arxiv]](https://arxiv.org/abs/2212.09925) [[Github]](https://github.com/pemami4911/ppde) [[colab demo]](https://colab.research.google.com/drive/1s3heukQga1ShfxrAMRxNtZFfSwu_D_m7?usp=sharing)
+[[DOI]](https://iopscience.iop.org/article/10.1088/2632-2153/accacd) [[arxiv]](https://arxiv.org/abs/2212.09925) [[Paper code]](https://github.com/pemami4911/ppde)   [[EvoProtGrad library]](https://github.com/NREL/EvoProtGrad)
 
 {%
     include image.html
     img="/img/PPDE/Proteins_qual_1row.png"
     caption="The marginal frequency of each sequence position visualized on the 3D structure of the wild type is the fraction of protein variants in the sampled variant pool that have a mutation at that sequence position. For example, nearly 100% of discovered UBE4B variants have a mutation at position 1145."
 %}
+
+## Announcing EvoProtGrad
+
+7/21/23: We have released a Python package accompanying this work with HuggingFace integration for protein directed evolution with protein language models. Check it out on [Github](https://github.com/NREL/EvoProtGrad).
+
+```bash
+pip install evo_prot_grad
+```
+
+### Quick demo
+
+Evolve the avGFP protein with [Rostlab/prot_bert](https://huggingface.co/Rostlab/prot_bert).
+
+
+```python
+import evo_prot_grad
+
+prot_bert_expert = evo_prot_grad.get_expert('bert', temperature = 1.0)
+
+variants, scores = evo_prot_grad.DirectedEvolution(
+                   wt_fasta = 'test/gfp.fasta',    # path to wild type fasta file
+                   output = 'best',                # return best, last, all variants    
+                   experts = [prot_bert_expert],   # list of experts to compose
+                   parallel_chains = 1,            # number of parallel chains to run
+                   n_steps = 20,                   # number of MCMC steps per chain
+                   max_mutations = 10,             # maximum number of mutations per variant
+                   verbose = True                  # print debug info to command line
+)()
+```
 
 ## Summary
 
@@ -87,4 +117,4 @@ We show that we can plug in different [protein language models](https://www.bior
     img="/img/PPDE/PPDE_priors.png"
 %}
 
-See the paper for more details and results.
+See the paper and code for more details and results.
