--- a/_posts/blog/2023-01-05-ppde.md
+++ b/_posts/blog/2023-01-05-ppde.md
@@ -32,7 +32,7 @@ Presented at [NeurIPS'22 Workshop on Machine Learning in Structural Biology](htt
 
 ## Announcing EvoProtGrad
 
-7/21/23: We have released a Python package accompanying this work with HuggingFace integration for protein directed evolution with protein language models. Check it out on [Github](https://github.com/NREL/EvoProtGrad).
+7/21/23: We have released a Python package accompanying this work with HuggingFace integration for supporting a wide range of protein language models. Check it out on [Github](https://github.com/NREL/EvoProtGrad).
 
 ```bash
 pip install evo_prot_grad
